--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 </head>
-<body>
-    
+<body style="background-color: green;">
+    <h2>Now you got the new version control system</h2>
 </body>
 </html>
