testing changes are updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     
 </head>
 <body style="background-color: green;">
-    <h2>Now you got the new version control system</h2>
+    <h2>yey successfully connected server</h2>
 </body>
 </html>
